--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Jashnavi25.github.io/practical/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run deploy",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
 
   },
   "dependencies": {
